--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
