--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digital-wallet",
+  "name": "react-redux-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,22 +8,25 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
-    "@reduxjs/toolkit": "^1.7.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@inrupt/solid-client": "^1.20.1",
+    "@inrupt/solid-client-authn-browser": "^1.11.6",
+    "@reduxjs/toolkit": "^1.8.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^12.20.46",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.20.47",
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
-    "@types/react-redux": "^7.1.22",
+    "@types/react-redux": "^7.1.23",
+    "buffer": "^6.0.3",
     "eslint-config-airbnb-typescript": "^16.1.0",
-    "jest": "^27.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "~4.1.5",
@@ -32,23 +35,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "set CI=true && react-scripts test --coverage --watchAll=false ",
-    "eject": "react-scripts eject",
-    "jest": "jest --coverageReporters text-summary --",
-    "_lint": "eslint --config ./.eslintrc.json --ext tsx --ext ts",
-    "lint": "npm run _lint -- ./src/",
-    "lint:fix": "npm run _lint -- --fix ./src/",
-    "prepare": "husky install "
-  },
-  "jest": {
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    }
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
