--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "dependencies": {
     "@commitlint/config-conventional": "^16.2.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@inrupt/solid-client": "^1.20.1",
     "@inrupt/solid-client-authn-browser": "^1.11.6",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@mui/material": "^5.5.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
