--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "react-redux-typescript",
+  "name": "digital-wallet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@commitlint/config-conventional": "^16.2.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@inrupt/solid-client": "^1.20.1",
     "@inrupt/solid-client-authn-browser": "^1.11.6",
+    "@mui/material": "^5.5.3",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
