feat: reworking the entrypoints of the app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "max-len": ["error", {"code": 160}]
+      "max-len": ["error", {"code": 160}],
+      "linebreak-style": [0, "error", "windows"]
     }
 }
