--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "~4.1.5",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
   "scripts": {
