fix: added run cli script

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "e2e" : "cypress open",
-    "e2e-stage" : "cypress open --config-file ./cypress-staging.json"
+    "e2e-stage" : "cypress open --config-file ./cypress-staging.json",
+    "e2e-cli" :"cypress run"
 
   },
   "eslintConfig": {
