--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "e2e" : "cypress open",
+    "e2e" : " PORT=3005 cypress open",
     "e2e-stage" : "cypress open --config-file ./cypress-staging.json",
     "e2e-cli" :"cypress run"
 
