--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "typescript": "~4.1.5 || 4.5",
+    "typescript": "~4.5.5",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
