--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
