--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@inrupt/solid-client-authn-browser": "^1.12.2",
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
+    "jose": "^4.9.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "next-redux-wrapper": "^7.0.5",
@@ -28,6 +29,7 @@
     "react-intl": "^6.0.8",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.0",
+    "swr": "^1.3.0",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
