--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_OPTIONS=--inspect NEXTAUTH_DEBUG=1 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -24,6 +24,7 @@
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "next-redux-wrapper": "^7.0.5",
+    "random-js": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intl": "^6.0.8",
