feat: Proper initialization of MUI in Next.js.
Following the documentations example at:
https://github.com/mui/material-ui/tree/HEAD/examples/nextjs-with-typescript

--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@commitlint/config-conventional": "^17.0.3",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@inrupt/solid-client": "^1.23.2",
     "@inrupt/solid-client-authn-browser": "^1.12.2",
-    "@mui/material": "^5.10.2",
+    "@mui/material": "^5.10.4",
     "@reduxjs/toolkit": "^1.8.5",
     "jose": "^4.9.1",
     "next": "12.2.5",
