--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_OPTIONS=--inspect NEXTAUTH_DEBUG=1 next dev",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_OPTIONS=--inspect NEXTAUTH_DEBUG=1 node src/server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node src/server.js"
   },
   "dependencies": {
     "@commitlint/config-conventional": "^17.0.3",
@@ -34,7 +33,8 @@
     "react-scripts": "5.0.0",
     "swr": "^1.3.0",
     "uuid": "^8.3.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@types/node": "18.7.11",
