--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,18 @@
 {
+  "parser": "@typescript-eslint/parser",
   "extends": ["next/core-web-vitals", "prettier"],
-  "plugins": ["formatjs", "prettier"],
+  "plugins": ["@typescript-eslint", "formatjs", "prettier"],
   "rules": {
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": false,
+        "ignoreDeclarationSort": true,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
+        "allowSeparatedGroups": true
+      }
+    ],
     "prettier/prettier": "error",
     "formatjs/enforce-id": [
       "error",
@@ -12,5 +23,6 @@
     "formatjs/enforce-default-message": ["error", "literal"],
     "formatjs/enforce-placeholders": "error",
     "formatjs/no-multiple-whitespaces": "error"
-  }
+  },
+  "settings": { "import/resolver": { "typescript": { "project": "./tsconfig.json" } } }
 }
