--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.6",
     "clsx": "^1.2.1",
-    "eslint-plugin-formatjs": "^4.3.4",
     "jose": "^4.10.1",
     "next": "^12.3.1",
     "next-auth": "^4.14.0",
@@ -50,10 +49,14 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "commander": "^9.4.1",
     "eslint": "^8.25.0",
     "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-formatjs": "^4.3.4",
     "eslint-plugin-prettier": "^4.2.1",
     "typescript": "^4.8.4"
   }
