--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "DEBUG=1 NEXTAUTH_DEBUG=1 node --inspect src/server.js",
+    "dev": "DEBUG=1 NEXTAUTH_DEBUG=1 node --inspect src/server.js | pino-pretty",
     "build": "next build",
     "clean": "rm -rf .next",
     "start": "NODE_ENV=production node src/server.js",
@@ -35,6 +35,7 @@
     "next-auth": "^4.14.0",
     "node-jq": "^2.3.4",
     "npmvet": "^0.2.0",
+    "pino": "^8.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.1",
@@ -58,6 +59,7 @@
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-formatjs": "^4.3.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "pino-pretty": "^9.1.1",
     "typescript": "^4.8.4"
   }
 }
