--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "clean": "rm -rf .next",
     "start": "NODE_ENV=production node src/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "check": "npm run vet && npm run lint",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
@@ -46,6 +49,9 @@
     "ws": "^8.9.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.11.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -59,7 +65,12 @@
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-formatjs": "^4.3.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "history": "^5.3.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "msw": "^0.47.4",
     "pino-pretty": "^9.1.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "whatwg-fetch": "^3.6.2"
   }
 }
