feat: Allow to run without WSS.

--- a/.env-example
+++ b/.env-example
@@ -3,6 +3,7 @@ NEXTAUTH_SECRET=you-will-never-guess
 
 EGENDATA_SCHEMA_URL=https://pod-test.egendata.se/schema/core/v1#
 EGENDATA_PATH_FRAGMENT=egendata/
+EGENDATA_WITH_WEBSOCKET=true
 
 NEXT_PUBLIC_IDP_BASE_URL=https://idp-test.egendata.se/
 NEXT_PUBLIC_POD_BASE_URL=https://pod-test.egendata.se/
