--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "jsx": "preserve",
     "incremental": true,
     "sourceMap": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": ["./*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
